@@ -1,3 +1,4 @@
+* Add format_timedelta to Report
 * Add partial TO_CHAR support for date and datetime on SQLite
 * Setup default logging for WSGI app
 * Add format argument to report format_date function
